

===========================================================================
MARK: released gwenhywfar-1.18.0 (2005/08/24)
===========================================================================


2005/08/24: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_CryptToken_TransformPin()
- added encoding type FPIN2
- added an argument to GWEN_CryptToken_ChangePin: Pin type
  This is an API change, but so far only Gwen itself and Libchipcard2
  use this function.
- gct-tool has now an improved help screen and is less verbous otherwise


===========================================================================
MARK: released gwenhywfar-1.17.0 (2005/08/23)
===========================================================================


2005/08/23: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added functions
  - GWEN_DB_VariableRename()
  - GWEN_DB_GetCharValueFromNode()
  - GWEN_DB_SetCharValueInNode()
  - GWEN_DB_GetIntValueFromNode()
  - GWEN_DB_GetBinValueFromNode()


2005/08/22: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- no longer define gct-tool as experimental (disables warning)
- GWEN_Time_fromString now accepts constructs like "*D.*M.YYYY" (i.e.
  day and month may consist of multiple digits. This is needed to support
  old AqMoney1's export format)


2005-08-19   Christian Stimming <stimming@tuhh.de>

	* configure.ac, plugins/crypttoken/ohbci/ohbci.xml.in: Add version
	string OHBCI_VERSION_STRING for the xml plugin file.


===========================================================================
MARK: released gwenhywfar-1.16.0 (2005/08/19)
===========================================================================


2005/08/18: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed some bugs in crypttoken (especially in OpenHBCI crypttoken)

